Thumbnail on artist page now has fixed height to prevent blocks in grid form jumping around because of different heights.

--- a/client/critiquebrainz/static/css/critiquebrainz.css
+++ b/client/critiquebrainz/static/css/critiquebrainz.css
@@ -9,6 +9,7 @@ body { padding-top: 20px; color: #5a5a5a; }
 
 /* Artist page */
 #releases { margin-top: 20px; }
+#releases .thumbnail { height: 223px; }
 #releases .cover-art-container { height: 155px; }
 #releases .cover-art-container img {
     max-height: 155px;
